--- a/jquery_frame/template/login.html
+++ b/jquery_frame/template/login.html
@@ -1,4 +1,4 @@
-<div class="modBox" id="login">
+<div class="modBox" id="login" title="登录">
 	<form action="" class="vp_form">
 		<div class="vp_form_line">
 			<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
