--- a/jquery_frame/css/vpMain.css
+++ b/jquery_frame/css/vpMain.css
@@ -4,11 +4,13 @@ html{color:#000;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}body,di
 input[type="button"],input[type="submit"],input[type="text"],input[type="tel"],textarea,select{-webkit-appearance:none;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 
 /* 弹层样式 */
-.layerHint{position: fixed;width: 100%;height: 100%;background: rgba(0,0,0,0.4);left:0px;top:0px;z-index:10;display: none;}
+.layerHint{position: fixed;width: 100%;height: 100%;background: rgba(0,0,0,0.4);left:0px;top:0px;z-index:100;display: none;}
 .tran_layer .layer_cont{position: absolute;width: 80%;left:10%;min-height: 180px;background: #fff;border-radius: 5px;overflow: hidden;top:50%;margin-top: -90px;text-align: center;padding: 20px 15px 45px;box-sizing:border-box;}
 .tran_layer h4{font-size: 18px;color: #12161D;height: 30px;line-height: 30px;overflow: hidden;}
 .tran_layer p{color: #4A4A4A;margin-top: 5px;line-height: 20px;height: 60px;overflow: hidden;word-wrap:break-word;word-break:break-all;}
 .tran_layer span{display: block;border-top:1px solid #E0DFDF;font-weight: bold;height: 44px;position: absolute;left:0px;bottom:0px;width: 100%;line-height: 44px;font-size: 14px;color: #4A4A4A;}
+.loading_layer .layer_cont{width: 50px;height: 50px;border-radius: 5px;background: rgba(0,0,0,0.6);text-align: center;top:50%;left:50%;margin-left: -25px;margin-top: -25px;position: absolute;font-size: 0px;line-height: 0px;}
+.loading_layer .layer_cont img{width: 80%;vertical-align: middle;top:10%;position: relative;}
 
 
 /*   显示隐藏css  */
@@ -74,7 +76,7 @@ input[type="button"],input[type="submit"],input[type="text"],input[type="tel"],t
 
 /* 首页 */
 #view{position: absolute;width: 100%;height: 100%;left:0px;top:0px;z-index:3;overflow-x: hidden;}
-#header{height: 50px;line-height: 50px;text-align: center;font-size: 16px;border-bottom:1px solid #d8d8d8;position: fixed;width: 100%;left:0px;top:0px;z-index:11;background: #fff;}
+#header{height: 50px;line-height: 50px;text-align: center;font-size: 16px;border-bottom:1px solid #E7EFF3;position: fixed;width: 100%;left:0px;top:0px;z-index:11;background: #fff;}
 #tabs {position: fixed;z-index:10;width: 100%;bottom:0px;left:0px;}
 #tabs li{float: left;width: 25%;text-align: center;background: #f00;color: #fff;line-height: 50px;border-left:1px solid #fff;border-right:1px solid #fff;}
 #view .modBox{background: #fff;left:0;top:0px;width: 100%;min-height:100%;padding-top: 50px;overflow-x: hidden;position: absolute;opacity: 0;z-index:2;
