--- a/www/src/template/meteor.html
+++ b/www/src/template/meteor.html
@@ -1,4 +1,4 @@
-<div class="modBox" id="meteor" title="看流星">
+<div class="modBox" id="meteor" title="看流星" noTitle="true">
 	<ul class="meteor">
 		<li></li>
 		<li></li>
