--- a/www/src/template/sign.html
+++ b/www/src/template/sign.html
@@ -1,31 +1,33 @@
 <div class="modBox" id="sign" title="注册">
-	<form action="" class="vp_form">
-		<div class="vp_form_line">
-			<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
-		</div>
-		<div class="vp_form_line">
-			<label for="">手机号：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
-		</div>
-		<div class="vp_form_line">
-			<label for="">性别：</label>
-			男<input type="radio" name="sex_nan" value="0" checked="checked" class="fm_test_check" id="">
-			女<input type="radio" name="sex_nv" value="1" class="fm_test_check" id="">
-		</div>
-		<div class="vp_form_line">
-			<label for="">邮箱：</label><input type="text" name="emall" class="vp_form_text fm_test_email" placeholder="请填写邮箱"/>
-		</div>
-		<div class="vp_form_line">
-			<label for="">地区：</label>
-			<select name="area" id="" class="vp_form_select fm_test_select">
-				<option value="0">请选择</option>
-				<option value="1">深圳</option>
-				<option value="2">深圳</option>
-				<option value="3">深圳</option>
-				<option value="4">深圳</option>
-				<option value="5">深圳</option>
-				<option value="6">深圳</option>
-			</select>
-		</div>
-		<input type="submit" class="vp_form_submit" value="提交" />
-	</form>
+	<div class="modScroll">
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">手机号：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<div class="vp_form_line">
+				<label for="">性别：</label>
+				男<input type="radio" name="sex_nan" value="0" checked="checked" class="fm_test_check" id="">
+				女<input type="radio" name="sex_nv" value="1" class="fm_test_check" id="">
+			</div>
+			<div class="vp_form_line">
+				<label for="">邮箱：</label><input type="text" name="emall" class="vp_form_text fm_test_email" placeholder="请填写邮箱"/>
+			</div>
+			<div class="vp_form_line">
+				<label for="">地区：</label>
+				<select name="area" id="" class="vp_form_select fm_test_select">
+					<option value="0">请选择</option>
+					<option value="1">深圳</option>
+					<option value="2">深圳</option>
+					<option value="3">深圳</option>
+					<option value="4">深圳</option>
+					<option value="5">深圳</option>
+					<option value="6">深圳</option>
+				</select>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+	</div>
 </div>
