--- a/www/src/template/login.html
+++ b/www/src/template/login.html
@@ -9,5 +9,78 @@
 			</div>
 			<input type="submit" class="vp_form_submit" value="提交" />
 		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		<form action="" class="vp_form">
+			<div class="vp_form_line">
+				<label for="">用户名：</label><input type="text" name="name" class="vp_form_text fm_test_empty" placeholder="请填写用户名" />
+			</div>
+			<div class="vp_form_line">
+				<label for="">密码：</label><input type="text" name="tel" class="vp_form_text fm_test_tele" placeholder="请输入手机号"/>
+			</div>
+			<input type="submit" class="vp_form_submit" value="提交" />
+		</form>
+		
 	</div>
 </div>
