--- a/www/css/vpMain.css
+++ b/www/css/vpMain.css
@@ -76,14 +76,14 @@ input[type="button"],input[type="submit"],input[type="text"],input[type="tel"],t
 }
 
 /* 首页 */
-.pb50 .modScroll{padding-bottom: 50px;}
+.pb0{padding-top: 0px !important;}
 #view{position: absolute;width: 100%;height: 100%;left:0px;top:0px;z-index:3;overflow-x: hidden;}
 #header{height: 50px;line-height: 50px;text-align: center;font-size: 16px;border-bottom:1px solid #E7EFF3;position: fixed;width: 100%;left:0px;top:0px;z-index:11;background: #fff;}
 #tabs {position: fixed;z-index:10;width: 100%;bottom:0px;left:0px;}
 #tabs li{float: left;width: 25%;text-align: center;background: #f00;color: #fff;line-height: 50px;border-left:1px solid #fff;border-right:1px solid #fff;}
 .modBox{background: #fff;left:0;top:0px;width: 100%;height:100%;padding-top: 50px;overflow: hidden;position: absolute;opacity: 0;z-index:2;
 }
-.modScroll{position: absolute;width: 100%;}
+.modScroll{position: absolute;width: 100%;padding-bottom: 50px;}
 #view .move_activate{z-index:5;
   -webkit-animation: moveView 0.5s cubic-bezier(0.165, 0.840, 0.440, 1.000) 0s both;
       animation: moveView 0.5s cubic-bezier(0.165, 0.840, 0.440, 1.000) 0s both;}
